# status

./: .env.example  .flake8  .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  PLACEHOLDER_REMOVAL_SUMMARY.md  README.md  pyproject.toml  setup-plan.md  setup.py  start.py  start.sh
.claude/: CLAUDE.md  README.md  architecture.md  conventions.md  database_schema.md  prompt_examples.md  settings.json  templates.md
.claude/context/: architecture.md  color_logging_guide.md  conventions.md
.claude/examples/: prompt_examples.md
.github/: copilot-instructions.md
.github/workflows/: lint.yml  pytest.yml
STATUS_DATA/sqlresults/: db_mapping.json
data/sqlresults/: db_mapping.json
plans/: config_update_dynamic_years.md  copilot_prompt.md  setup.md  wikipedia_medicine_project_plan_v2.md
src/: __init__.py  config.py  database.py  logging_config.py  main.py  processor.py  queries.py  reports.py  utils.py  workflow.py
src/services/: __init__.py  analytics_db.py  database.py  db_mapping.py  page.py  processor.py  queries.py  reports.py
src/workflow/: __init__.py  analytics_db.py  db_mapping.py  runner.py  step1_retrieve_titles.py  step2_process_languages.py  step3_generate_reports.py  step4_uploader.py  workflow_separation_plan.md
src/workflows/: __init__.py  config.py  state_manager.py  step1_retrieve_titles.py
tests/integration/: test_workflow.py
tests/unit/: test_config.py  test_database.py  test_logging_config.py  test_processor.py  test_queries.py  test_reports.py  test_utils.py  test_workflow.py  test_workflow_orchestrator.py
(+10 files in other folders)
